# vuln-fixer

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.yaml
docs/: ARCHITECTURE.md  CVE-2022-42004-analysis.md  PLAN.md  gradle-dependency-resolution-vs-gitlab-scanning.md
prompts/: fix_vulnerability.md
src/: __init__.py  fixer_agent.py  gitlab_client.py  main.py  vuln_parser.py
