[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vuln-fixer"
version = "0.1.0"
description = "Automated security vulnerability remediation for GitLab repositories"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
vuln-fixer = "src.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
